// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> Render checkbox 1`] = `
<div
  class="form-group row"
>
  <div
    class="form-label col-sm-3"
  >
    <label
      class="form-label"
      for="1"
    >
      Test label
    </label>
  </div>
  <div
    class="form-check col-sm-8"
  >
    <input
      checked=""
      id="1"
      type="checkbox"
    />
    <small
      class="form-text text-muted"
    >
      Some help text
    </small>
  </div>
</div>
`;

exports[`<Checkbox/> Render uncheked checkbox 1`] = `
<div
  class="form-group row"
>
  <div
    class="form-label col-sm-3"
  >
    <label
      class="form-label"
      for="2"
    >
      Test label
    </label>
  </div>
  <div
    class="form-check col-sm-8"
  >
    <input
      id="2"
      type="checkbox"
    />
    <small
      class="form-text text-muted"
    >
      Some help text
    </small>
  </div>
</div>
`;
